PYIC-8920: TEST check where pacts are being saved

--- a/libs/sis-service/build.gradle
+++ b/libs/sis-service/build.gradle
@@ -30,6 +30,8 @@ dependencies {
 			project(path: ':libs:common-services', configuration: 'tests'),
 			project(path: ':libs:test-helpers')
 
+	testRuntimeOnly libs.junitPlatform
+
 	mockitoAgent(libs.mockitoCore) {
 		transitive = false
 	}
@@ -65,6 +67,9 @@ task pactConsumerTests (type: Test) {
 	useJUnitPlatform()
 	include 'uk/gov/di/ipv/core/library/sis/pact/**'
 	systemProperties['pact.rootDir'] = "$rootDir/build/pacts"
+
+	classpath = sourceSets.test.runtimeClasspath
+	testClassesDirs = sourceSets.test.output.classesDirs
 }
 
 jacocoTestReport {
