PYIC-8920: explicitly specify standard test classpath so gradle picks up the testRuntimeOnly dependency
Gradle 9.x introduces a breaking change where all test dependencies need to be explicitly declared. Prior to this update, gradle would do this for us behind the scenes if not explicitly declared e.g. wire up defaults for testClassesDirs and classpath

--- a/lambdas/call-dcmaw-async-cri/build.gradle
+++ b/lambdas/call-dcmaw-async-cri/build.gradle
@@ -49,6 +49,8 @@ task pactConsumerTests (type: Test) {
 	useJUnitPlatform()
 	include 'uk/gov/di/ipv/core/calldcmawasynccri/pact/**'
 	systemProperties['pact.rootDir'] = "$rootDir/build/pacts"
+	classpath = sourceSets.test.runtimeClasspath
+	testClassesDirs = sourceSets.test.output.classesDirs
 }
 
 jacocoTestReport {
