--- a/lambdas/process-cri-callback/build.gradle
+++ b/lambdas/process-cri-callback/build.gradle
@@ -56,6 +56,8 @@ task pactConsumerTests (type: Test) {
 	useJUnitPlatform()
 	include 'uk/gov/di/ipv/core/processcricallback/pact/**'
 	systemProperties['pact.rootDir'] = "$rootDir/build/pacts"
+	classpath = sourceSets.test.runtimeClasspath
+	testClassesDirs = sourceSets.test.output.classesDirs
 }
 
 jacocoTestReport {
