--- a/libs/sis-service/build.gradle
+++ b/libs/sis-service/build.gradle
@@ -65,6 +65,8 @@ task pactConsumerTests (type: Test) {
 	useJUnitPlatform()
 	include 'uk/gov/di/ipv/core/library/sis/pact/**'
 	systemProperties['pact.rootDir'] = "$rootDir/build/pacts"
+	classpath = sourceSets.test.runtimeClasspath
+	testClassesDirs = sourceSets.test.output.classesDirs
 }
 
 jacocoTestReport {
