--- a/libs/ticf-cri-service/build.gradle
+++ b/libs/ticf-cri-service/build.gradle
@@ -46,6 +46,8 @@ task pactConsumerTests (type: Test) {
 	useJUnitPlatform()
 	include 'uk/gov/di/ipv/core/library/ticf/pact/**'
 	systemProperties['pact.rootDir'] = "$rootDir/build/pacts"
+	classpath = sourceSets.test.runtimeClasspath
+	testClassesDirs = sourceSets.test.output.classesDirs
 }
 
 jacocoTestReport {
