PYIC-8910: Add F2F restart audit event

--- a/lambdas/reset-session-identity/build.gradle
+++ b/lambdas/reset-session-identity/build.gradle
@@ -12,6 +12,7 @@ configurations {
 dependencies {
 	implementation libs.awsLambdaJavaCore,
 			libs.awsLambdaJavaEvents,
+			project(":libs:audit-service"),
 			project(":libs:common-services"),
 			project(":libs:verifiable-credentials"),
 			project(":libs:cri-response-service"),
