PYIC-8846: add name attribute to LoadBalancerListenerTargetGroupECS
Deployment is failing because the new update requires creating a new load balance. When cloudformation tries to replace the old ALB with the new one before deleting the old one, the target group is still attached to the old one so we get a "target groups cannot be associated with more than one load balancer" error. Adding a name to the target group forces CF to create a new target group instead of reusing the existing one

--- a/journey-map/deploy/template.yaml
+++ b/journey-map/deploy/template.yaml
@@ -206,6 +206,7 @@ Resources:
   LoadBalancerListenerTargetGroupECS:
     Type: AWS::ElasticLoadBalancingV2::TargetGroup
     Properties:
+      Name: !Sub "${AWS::StackName}-ecs-tg"
       HealthCheckEnabled: TRUE
       HealthCheckProtocol: HTTP
       HealthCheckPort: 8080
