--- a/lambdas/user-reverification/build.gradle
+++ b/lambdas/user-reverification/build.gradle
@@ -26,6 +26,8 @@ dependencies {
 			project(path: ':libs:test-helpers')
 
 	constraints {
+		// TODO: remove when new version of au.com.dius.pact.provider:junit5
+		// is able to resolve this vulnerability
 		testImplementation('io.netty:netty-codec-http2:4.1.124.Final') {
 			because "this version patches the vulnerability CVE-2025-55163"
 		}
