--- a/libs/test-helpers/build.gradle
+++ b/libs/test-helpers/build.gradle
@@ -25,6 +25,8 @@ dependencies {
 			libs.mockitoJunit
 
 	constraints {
+		// TODO: remove when new version of au.com.dius.pact.consumer:junit5
+		// is able to resolve this vulnerability
 		testImplementation('io.netty:netty-codec-http2:4.1.124.Final') {
 			because "this version patches the vulnerability CVE-2025-55163"
 		}
