PYIC-8846: add session timeout to journey map
We now authenticate via Google SSO. The session is persisted via an ALB-managed cookie and as long as it remains valid, will no longer consult Google. This means that even after logging out of Google, a user will still have access to the journey map. Adding a session timeout will help reduce the window for bad actors by invalidating the session after a given period of time and requiring the user to log back in

--- a/journey-map/deploy/template.yaml
+++ b/journey-map/deploy/template.yaml
@@ -244,6 +244,7 @@ Resources:
             UserInfoEndpoint: https://openidconnect.googleapis.com/v1/userinfo
             Scope: "openid email"
             OnUnauthenticatedRequest: authenticate
+            SessionTimeout: "43200"
         - Order: 2
           TargetGroupArn: !Ref LoadBalancerListenerTargetGroupECS
           Type: forward
