PYIC-8927: explicitly handle oauth error responses from the async DCMAW
When core receives an oauth error from async DCMAW, the user correctly sees the "pyi-technical" screen but this is implicitly handled by core-front. Core-front receives a "/journey/error" which it tries to send to the journey engine. However, because this event isn't explicitly handled by the appropriate states, core-back will respond with a 500. Core-front will handle this unexpected error by displaying the generic technical error page. Instead, we should explicitly support the error event in the journey map states which then allows us to test the scenario in the api tests

--- a/lambdas/process-journey-event/src/main/resources/statemachine/journey-maps/nested-journeys/strategic-app-triage.yaml
+++ b/lambdas/process-journey-event/src/main/resources/statemachine/journey-maps/nested-journeys/strategic-app-triage.yaml
@@ -326,6 +326,9 @@ nestedJourneyStates:
             targetState: MOBILE_IPHONE_DOWNLOAD_PAGE_NON_UK_NO_APP_OPTIONS
       anotherWay:
         exitEventToEmit: anotherWay
+      error:
+        targetJourney: TECHNICAL_ERROR
+        targetState: ERROR
 
   MOBILE_APP_ONLY_IPHONE_DOWNLOAD_PAGE:
     response:
@@ -343,6 +346,9 @@ nestedJourneyStates:
             targetState: MOBILE_IPHONE_DOWNLOAD_PAGE_NON_UK_NO_APP_OPTIONS
       anotherWay:
         exitEventToEmit: anotherWay
+      error:
+        targetJourney: TECHNICAL_ERROR
+        targetState: ERROR
 
   MOBILE_IPHONE_DOWNLOAD_PAGE_EXIT_BUFFER:
     response:
@@ -388,6 +394,9 @@ nestedJourneyStates:
             targetState: MOBILE_ANDROID_DOWNLOAD_PAGE_NON_UK_NO_APP_OPTIONS
       anotherWay:
         exitEventToEmit: anotherWay
+      error:
+        targetJourney: TECHNICAL_ERROR
+        targetState: ERROR
 
   MOBILE_APP_ONLY_ANDROID_DOWNLOAD_PAGE:
     response:
@@ -405,6 +414,9 @@ nestedJourneyStates:
             targetState: MOBILE_ANDROID_DOWNLOAD_PAGE_NON_UK_NO_APP_OPTIONS
       anotherWay:
         exitEventToEmit: anotherWay
+      error:
+        targetJourney: TECHNICAL_ERROR
+        targetState: ERROR
 
   MOBILE_ANDROID_DOWNLOAD_PAGE_EXIT_BUFFER:
     response:
