PYIC-8932 Update DCMAW disabled tests to use DCMAW Async CRI via new feature set

--- a/local-running/core.local.params.yaml
+++ b/local-running/core.local.params.yaml
@@ -413,6 +413,10 @@ core:
       credentialIssuers:
         dcmaw:
           enabled: false
+    dcmawAsyncDisabled:
+      credentialIssuers:
+        dcmawAsync:
+          enabled: false
     # Enabling CRIs
     ticfCriBeta:
       credentialIssuers:
