PYIC-8932 Maintain limited failover routing for v2 app (DCMAW Async CRI)
Most importantly re-routing app entry points at the start of new proving journeys. This is *not* a complete nor strategic journey resilience solution, there may still be entry points into the app which are not covered.

--- a/lambdas/process-journey-event/src/main/resources/statemachine/journey-maps/new-p1-identity.yaml
+++ b/lambdas/process-journey-event/src/main/resources/statemachine/journey-maps/new-p1-identity.yaml
@@ -34,7 +34,7 @@ states:
             targetState: STRATEGIC_APP_TRIAGE_PYI_ESCAPE
             targetEntryEvent: appTriage
         checkIfDisabled:
-          dcmaw:
+          dcmawAsync:
             targetJourney: TECHNICAL_ERROR
             targetState: ERROR
 
@@ -142,7 +142,7 @@ states:
           strategicAppEnabled:
             targetState: STRATEGIC_APP_TRIAGE
         checkIfDisabled:
-          dcmaw:
+          dcmawAsync:
             targetState: NINO_START_PAGE
             checkMitigation:
               enhanced-verification:
@@ -371,7 +371,7 @@ states:
           strategicAppEnabled:
             targetState: STRATEGIC_APP_TRIAGE_PYI_ESCAPE
         checkIfDisabled:
-          dcmaw:
+          dcmawAsync:
             targetJourney: TECHNICAL_ERROR
             targetState: ERROR
       f2f:
@@ -558,7 +558,7 @@ states:
           strategicAppEnabled:
             targetState: STRATEGIC_APP_TRIAGE_PYI_ESCAPE
         checkIfDisabled:
-          dcmaw:
+          dcmawAsync:
             targetJourney: TECHNICAL_ERROR
             targetState: ERROR
       end:
@@ -578,7 +578,7 @@ states:
             targetState: STRATEGIC_APP_TRIAGE
             targetEntryEvent: appTriage
         checkIfDisabled:
-          dcmaw:
+          dcmawAsync:
             targetJourney: TECHNICAL_ERROR
             targetState: ERROR
       passport:
@@ -612,7 +612,7 @@ states:
           strategicAppEnabled:
             targetState: STRATEGIC_APP_TRIAGE_PYI_ESCAPE
         checkIfDisabled:
-          dcmaw:
+          dcmawAsync:
             targetJourney: TECHNICAL_ERROR
             targetState: ERROR
       end:
@@ -726,7 +726,7 @@ states:
           strategicAppEnabled:
             targetState: STRATEGIC_APP_TRIAGE_PYI_ESCAPE
         checkIfDisabled:
-          dcmaw:
+          dcmawAsync:
             targetJourney: TECHNICAL_ERROR
             targetState: ERROR
       f2f:
