PYIC-8932 Remove now unused feature set and align test params file

--- a/libs/test-data/src/main/resources/test-parameters.yaml
+++ b/libs/test-data/src/main/resources/test-parameters.yaml
@@ -415,9 +415,9 @@ core:
       credentialIssuers:
         drivingLicence:
           enabled: false
-    dcmawOffTest:
+    dcmawAsyncDisabled:
       credentialIssuers:
-        dcmaw:
+        dcmawAsync:
           enabled: false
     # Enabling CRIs
     ticfCriBeta:
