PYIC-8913: Add API tests for mortality fraud checks

--- a/api-tests/.env.local
+++ b/api-tests/.env.local
@@ -11,6 +11,9 @@ ASYNC_QUEUE_DELAY=2
 AIS_STUB_BASE_URL="https://ais.stubs.account.gov.uk"
 CIMIT_STUB_BASE_URL="https://cimit.stubs.account.gov.uk"
 CIMIT_INTERNAL_API_URL="https://cimit-api.stubs.account.gov.uk"
+# Example values for using dev env CIMIT stub
+#CIMIT_STUB_BASE_URL="https://cimit-dev-danc.02.core.dev.stubs.account.gov.uk"
+#CIMIT_INTERNAL_API_URL="https://cimit-api-dev-danc.02.core.dev.stubs.account.gov.uk"
 EVCS_STUB_BASE_URL="https://evcs.stubs.account.gov.uk"
 TICF_STUB_BASE_URL="https://ticf.stubs.account.gov.uk"
 
