--- a/lambdas/process-journey-event/src/main/resources/statemachine/journey-maps/new-p2-identity.yaml
+++ b/lambdas/process-journey-event/src/main/resources/statemachine/journey-maps/new-p2-identity.yaml
@@ -106,8 +106,8 @@ states:
         targetState: STRATEGIC_APP_TRIAGE
         targetEntryEvent: appTriage
       error:
-        targetState: APP_DOC_CHECK
-        targetEntryEvent: next
+        targetJourney: TECHNICAL_ERROR
+        targetState: ERROR_NO_TICF
 
   RESET_SESSION_IDENTITY:
     response:
@@ -138,54 +138,6 @@ states:
           f2f:
             targetJourney: INELIGIBLE
             targetState: INELIGIBLE
-
-  APP_DOC_CHECK:
-    nestedJourney: APP_DOC_CHECK
-    exitEvents:
-      next:
-        targetState: POST_APP_DOC_CHECK_SUCCESS_PAGE
-      incomplete:
-        targetState: MULTIPLE_DOC_CHECK_PAGE
-        checkMitigation:
-          enhanced-verification:
-            targetState: MITIGATION_01_PYI_POST_OFFICE
-            checkIfDisabled:
-              f2f:
-                targetJourney: INELIGIBLE
-                targetState: INELIGIBLE
-      incomplete-invalid-dl:
-        targetState: PROVE_IDENTITY_ANOTHER_WAY_AFTER_APP_DOC_CHECK
-      alternate-doc-invalid-dl:
-        targetState: WEB_DL_OR_PASSPORT
-        targetEntryEvent: alternate-doc-invalid-dl-another-way
-        auditEvents:
-          - IPV_MITIGATION_START
-        auditContext:
-          mitigationType: invalid-dl
-
-  PROVE_IDENTITY_ANOTHER_WAY_AFTER_APP_DOC_CHECK:
-    response:
-      type: page
-      pageId: prove-identity-another-way
-    events:
-      anotherTypePhotoId:
-        targetState: APP_DOC_CHECK
-        targetEntryEvent: next
-      postOffice:
-        targetState: F2F_START_PAGE
-        checkIfDisabled:
-          f2f:
-            targetJourney: INELIGIBLE
-            targetState: INELIGIBLE
-        checkMitigation:
-          enhanced-verification:
-            targetState: PYI_POST_OFFICE
-            checkIfDisabled:
-              f2f:
-                targetJourney: INELIGIBLE
-                targetState: INELIGIBLE
-      returnToRp:
-        targetState: PROCESS_INCOMPLETE_IDENTITY
 
   STRATEGIC_APP_TRIAGE:
     nestedJourney: STRATEGIC_APP_TRIAGE
@@ -699,40 +651,6 @@ states:
       returnToRp:
         targetState: PROCESS_INCOMPLETE_IDENTITY
 
-  APP_DOC_CHECK_PYI_ESCAPE:
-    nestedJourney: APP_DOC_CHECK
-    exitEvents:
-      next:
-        targetState: PROCESS_NEW_IDENTITY
-      incomplete:
-        targetState: PYI_POST_OFFICE
-        checkIfDisabled:
-          f2f:
-            targetJourney: INELIGIBLE
-            targetState: INELIGIBLE
-      incomplete-invalid-dl:
-        targetState: PROVE_IDENTITY_ANOTHER_WAY_AFTER_APP_DOC_CHECK_PYI_ESCAPE
-      alternate-doc-invalid-dl:
-        targetJourney: FAILED
-        targetState: FAILED
-
-  PROVE_IDENTITY_ANOTHER_WAY_AFTER_APP_DOC_CHECK_PYI_ESCAPE:
-    response:
-      type: page
-      pageId: prove-identity-another-way
-    events:
-      anotherTypePhotoId:
-        targetState: APP_DOC_CHECK_PYI_ESCAPE
-        targetEntryEvent: next
-      postOffice:
-        targetState: PYI_POST_OFFICE
-        checkIfDisabled:
-          f2f:
-            targetJourney: INELIGIBLE
-            targetState: INELIGIBLE
-      returnToRp:
-        targetState: PROCESS_INCOMPLETE_IDENTITY
-
   MITIGATION_KBV_FAIL_PHOTO_ID:
     response:
       type: page
@@ -767,17 +685,6 @@ states:
   # Common Mitigation states - invalid-dl/invalid-passport
 
   # International Address journey
-  APP_DOC_CHECK_INTERNATIONAL_ADDRESS:
-    nestedJourney: APP_DOC_CHECK
-    exitEvents:
-      next:
-        targetState: POST_APP_DOC_CHECK_INTERNATIONAL_SUCCESS_PAGE
-      incomplete:
-        targetState: NON_UK_NO_APP_PAGE
-      incomplete-invalid-dl:
-        targetState: NON_UK_NO_APP_PAGE
-      alternate-doc-invalid-dl:
-        targetState: NON_UK_NO_APP_PAGE
 
   LIVE_IN_UK_PAGE:
     response:
@@ -815,30 +722,6 @@ states:
       useApp:
         targetState: STRATEGIC_APP_TRIAGE_INTERNATIONAL_ADDRESS
         targetEntryEvent: appTriage
-
-  NON_UK_APP_INTRO_PAGE:
-    response:
-      type: page
-      pageId: non-uk-app-intro
-    events:
-      useApp:
-        targetState: APP_DOC_CHECK_INTERNATIONAL_ADDRESS
-        targetEntryEvent: next
-        auditEvents:
-          - IPV_INTERNATIONAL_ADDRESS_START
-      returnToRp:
-        targetState: PROCESS_INCOMPLETE_IDENTITY
-
-  NON_UK_NO_APP_PAGE:
-    response:
-      type: page
-      pageId: non-uk-no-app
-    events:
-      next:
-        targetState: APP_DOC_CHECK_INTERNATIONAL_ADDRESS
-        targetEntryEvent: next
-      end:
-        targetState: PROCESS_INCOMPLETE_IDENTITY
 
   POST_APP_DOC_CHECK_INTERNATIONAL_SUCCESS_PAGE:
     response:
