PYIC-8940: update journey map to handle CI failures from the v2 app in the parent journey calling the strategic app nested journeys. This matches how failures are being handled when a user fails DL auth source check due to a CI
This is so we can route users to sorry-could-not-confirm-details if they fail the v2 app with a CI during an update name journey AND match existing handling of failures e.g. from DL auth source check

--- a/lambdas/process-journey-event/src/main/resources/statemachine/journey-maps/nested-journeys/strategic-app-handle-result.yaml
+++ b/lambdas/process-journey-event/src/main/resources/statemachine/journey-maps/nested-journeys/strategic-app-handle-result.yaml
@@ -23,8 +23,7 @@ nestedJourneyStates:
       fail-with-no-ci:
         exitEventToEmit: anotherWay
       fail-with-ci:
-        targetJourney: FAILED
-        targetState: FAILED
+        exitEventToEmit: failWithCiFromApp
       vcs-not-correlated:
         targetJourney: FAILED
         targetState: FAILED
