--- a/lambdas/process-journey-event/src/main/resources/statemachine/journey-maps/nested-journeys/strategic-app-triage.yaml
+++ b/lambdas/process-journey-event/src/main/resources/statemachine/journey-maps/nested-journeys/strategic-app-triage.yaml
@@ -105,8 +105,7 @@ nestedJourneyStates:
       fail-with-no-ci:
         exitEventToEmit: anotherWay
       fail-with-ci:
-        targetJourney: FAILED
-        targetState: FAILED
+        exitEventToEmit: failWithCiFromApp
       enhanced-verification:
         exitEventToEmit: anotherWay
       vcs-not-correlated:
@@ -139,8 +138,7 @@ nestedJourneyStates:
       fail-with-no-ci:
         exitEventToEmit: anotherWay
       fail-with-ci:
-        targetJourney: FAILED
-        targetState: FAILED
+        exitEventToEmit: failWithCiFromApp
       enhanced-verification:
         exitEventToEmit: anotherWay
       vcs-not-correlated:
@@ -193,8 +191,7 @@ nestedJourneyStates:
       fail-with-no-ci:
         exitEventToEmit: anotherWay
       fail-with-ci:
-        targetJourney: FAILED
-        targetState: FAILED
+        exitEventToEmit: failWithCiFromApp
       vcs-not-correlated:
         targetJourney: FAILED
         targetState: FAILED
@@ -225,8 +222,7 @@ nestedJourneyStates:
       fail-with-no-ci:
         exitEventToEmit: anotherWay
       fail-with-ci:
-        targetJourney: FAILED
-        targetState: FAILED
+        exitEventToEmit: failWithCiFromApp
       vcs-not-correlated:
         targetJourney: FAILED
         targetState: FAILED
@@ -469,6 +465,8 @@ nestedJourneyStates:
         exitEventToEmit: incompleteDlAuthCheckInvalidDl
       failedDlAuthCheckInvalidDl:
         exitEventToEmit: failedDlAuthCheckInvalidDl
+      failWithCiFromApp:
+        exitEventToEmit: failWithCiFromApp
       retryApp:
         checkJourneyContext:
           mamIphone:
