--- a/lambdas/process-journey-event/src/main/resources/statemachine/journey-maps/new-p2-identity.yaml
+++ b/lambdas/process-journey-event/src/main/resources/statemachine/journey-maps/new-p2-identity.yaml
@@ -170,6 +170,9 @@ states:
           - IPV_MITIGATION_START
         auditContext:
           mitigationType: invalid-dl
+      failWithCiFromApp:
+        targetJourney: FAILED
+        targetState: FAILED
       returnToRp:
         targetState: PROCESS_INCOMPLETE_IDENTITY
         journeyContextToUnset: appOnly
@@ -631,6 +634,9 @@ states:
       failedDlAuthCheckInvalidDl:
         targetJourney: FAILED
         targetState: FAILED
+      failWithCiFromApp:
+        targetJourney: FAILED
+        targetState: FAILED
       returnToRp:
         targetState: PROCESS_INCOMPLETE_IDENTITY
 
@@ -743,6 +749,9 @@ states:
         targetState: STRATEGIC_APP_NON_UK_NO_APP_PAGE
       failedDlAuthCheckInvalidDl:
         targetState: STRATEGIC_APP_NON_UK_NO_APP_PAGE
+      failWithCiFromApp:
+        targetJourney: FAILED
+        targetState: FAILED
       returnToRp:
         targetState: PROCESS_INCOMPLETE_IDENTITY
 
