--- a/local-running/compose.yaml.template
+++ b/local-running/compose.yaml.template
@@ -72,7 +72,7 @@ services:
       ENVIRONMENT: local
       AWS_EMF_ENVIRONMENT: Local
       AWS_XRAY_CONTEXT_MISSING: IGNORE_ERROR
-      POWERTOOLS_METRICS_NAMESPACE: CoreBackEmbeddedMetrics-local
+      POWERTOOLS_METRICS_DISABLED: true
     ports:
       - "4502:4502"
       - "5002:5002"
