--- a/deploy/template.yaml
+++ b/deploy/template.yaml
@@ -46,6 +46,7 @@ Globals:
         OTEL_INSTRUMENTATION_COMMON_DEFAULT_ENABLED: false
         OTEL_INSTRUMENTATION_AWS_LAMBDA_ENABLED: true
         OTEL_INSTRUMENTATION_AWS_SDK_ENABLED: true
+        OPENTELEMETRY_EXTENSION_LOG_LEVEL: warn
         OPENTELEMETRY_COLLECTOR_CONFIG_URI: '/var/task/collector.yaml'
         DT_CONNECTION_AUTH_TOKEN_OTLP: !If
           - UseDynatrace
